# CaloLogger-TeamOne

./: .firebaserc  .gitignore  README.md  pyproject.toml  sonar-project.properties
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  main.yml  quality-checks.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run.py  test.db
backend/app/: crud.py  database.py  logger.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  meals.py  weights.py
backend/app/tests/unit/: ninja_calls_tests.py
backend/app/utils/: db.py  ninja_calls.py  security.py
backend/scripts/: check_mi.py  create_db.py
backend/tests/performance/: deployed.html  local.html  locustfile.py
backend/tests/unit/: crud_tests.py  ninja_calls_tests.py  test_crud.py  test_db.py  test_logger.py  test_ninja_calls.py  test_routers.py  test_security.py  test_utils_security.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  unlighthouse.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: auth.ts  meals.ts  weight.ts
frontend/src/components/: Logout.tsx  container.tsx  header.tsx  loading.tsx  meal-chart.tsx  protected.tsx  weight-chart.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useLogin.tsx
frontend/src/pages/: dashboard.tsx  index.tsx  login.tsx  meal-tracking.tsx  signup.tsx  weight-tracking.tsx
frontend/src/pages/dashboard/: index.tsx  meal-chart.tsx  weight-chart.tsx
frontend/src/pages/meal-tracking/: index.tsx  meal-form.tsx  meal-list.tsx
frontend/src/pages/weight-tracking/: add-weight.tsx  index.tsx  weight-list.tsx
frontend/src/tests/: setup.ts
frontend/src/tests/api/: auth.test.ts  meals.test.ts  weight.test.ts
frontend/src/tests/components/: container.test.tsx  header.test.tsx  loading.test.tsx  logout.test.tsx
frontend/src/tests/constants/: index.ts
frontend/src/tests/hooks/: useLogin.test.ts
frontend/src/tests/pages/: login.test.tsx  signup.test.tsx
frontend/src/tests/pages/dashboard/: meal-chart.test.tsx  weight-chart.test.tsx
frontend/src/tests/pages/meal-tracking/: meal-form.test.tsx  meal-list.test.tsx
frontend/src/tests/pages/weight-tracking/: add-weight.test.tsx  weight-list.test.tsx
frontend/src/tests/utils/: parse-time.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: parse-time.ts
frontend/utils/: parse-time.ts
