[tool.poetry]
name = "calologger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
mutmut = "^2.4.4"
fastapi = "^0.110.1"
selenium = "^4.19.0"
radon = "^6.0.1"
flake8 = "^7.0.0"
locust = "^2.24.1"
streamlit = "^1.32.2"
bandit = "^1.7.8"
hypothesis = "^6.100.0"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
